<resources>
    <string name="app_name">Dalati</string>
    <string name="enter_password">Enter password</string>
    <string name="forget_password">forgot your password? </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verify_account">verify Account</string>
    <string name="enter_verification_code_sent_to_your_phone">Enter verification code sent to your phone</string>
    <string name="resend_code">Resend code</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="message">Message</string>
    <string name="sent_email">We Sent you an email for resetting password</string>
    <string name="name_required">Name is required</string>
    <string name="full_name">Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="edit">Edit</string>
    <string name="report_found_item">Report Found Item</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="found_at">Found At</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="item_description">Item Description</string>
    <string name="electronic">Electronic</string>
    <string name="type_">type :</string>
    <string name="phone">Phone</string>
    <string name="place">Place</string>
    <string name="claim">Claim</string>
    <string name="age">Age</string>
    <string name="ask_lanugage">Change Language?</string>

    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_password_to_change_your_email">Please Enter password to change your email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="filter">Filter</string>
    <string name="go">Go</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_lost_items">View Lost Items</string>
    <string name="i_found_an_item">I Found an Item</string>
    <string name="i_lost_an_item">I Lost an Item</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="please_enter_your_email_address">please enter your email address</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="share">Share</string>
    <string name="test">Test</string>
    <string name="log_out">Log out</string>
    <string name="choose_Type">Choose Type</string>
    <string name="report_lost">Report Lost Item</string>
    <string name="email_is_required">Email is required</string>
    <string name="need_email">Need Email</string>
    <string name="pass_">Password is Required</string>
    <string name="phone_required">Phone is Required</string>
    <string name="pass1">\"Your password must contain:  lower and upper cases with numbers \"</string>
    <string name="try_again">Try again</string>
    <string name="user_is_null">User is null</string>
    <string name="rest_email_sent">Reset Email Sent</string>
    <string name="OTP">OTP Code Sent</string>
    <string name="RegError">Registration Error</string>
    <string name="invalid_Code">Invalid Code</string>
    <string name="otp">OTP code sent</string>
    <string name="language">Language</string>
    <string name="found_items">Found Items</string>
    <string name="offices">Officer</string>
    <string name="about">About</string>
    <string name="my_requests">My Requests</string>
    <string name="hello_sara">Hello Sara,</string>
    <string name="age_error">Age is Required</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer">Prefer not to say</string>
    <string name="search_by">Search by location, type, description</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="hello">Hello</string>
    <string name="dfghn">\"Hello \"</string>
    <string name="lost_since">Lost since</string>
    <string name="lost_location">Lost at</string>
    <string name="uploading">Uploading</string>
    <string name="report_uploaded_successfully">Report Uploaded Successfully</string>
    <string-array name="languages">
        <item>@string/arabic</item>
        <item>@string/english</item>
    </string-array>


</resources>