<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvLocation"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="9dp"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp"
    android:padding="10dp"
    app:cardElevation="8dp"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/reset_your_password"
            android:textColor="@color/mainColor"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvResetMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/please_enter_your_email_address"
            android:textColor="@color/mainColor"
            android:textSize="15sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:baselineAligned="true"
            android:imeOptions="actionNext"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/mainColor"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:paddingBottom="-10dp"
                android:singleLine="true"


                />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_button"
                android:padding="5dp"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/bg_button"
                android:padding="5dp"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>